--- a/abc.css
+++ b/abc.css
@@ -47,7 +47,8 @@ a{
 }
 .login .group input{
     width: 100%;
-    height: 100%;
+    height: 10px;
+    border-radius: 10px;
     background-color: transparent;
     border: none;
     outline: none;
